// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadWorkflow renders correctly 1`] = `
<div class="vd-upload-workflow" style="width: 100%;">
  <h4 class="text-h6 mb-2">
    Documents à nous transmettre
  </h4>
  <div role="list" class="v-list vd-file-list v-sheet theme--light transparent" style="width: 100%;">
    <div tabindex="-1" role="listitem" class="v-list-item v-list-item--two-line theme--light flex-wrap">
      <div class="v-avatar v-list-item__avatar my-2" style="height: 40px; min-width: 40px; width: 40px;"><span aria-hidden="true" class="v-icon notranslate theme--light grey--text" style="font-size: 24px; height: 24px; width: 24px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg" style="font-size: 24px; height: 24px; width: 24px;"><path d="M13,9V3.5L18.5,9M6,2C4.89,2 4,2.89 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6Z"></path></svg></span></div>
      <div class="v-list-item__content">
        <div class="v-list-item__title text-wrap grey--text">
          test
        </div>
        <!---->
        <!---->
      </div>
      <div class="v-list-item__action flex-row"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default" aria-label="Sélectionner le fichier"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light grey--text"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z"></path></svg></span></span></button>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <hr role="separator" aria-orientation="horizontal" class="v-divider v-divider--inset theme--light">
    <div tabindex="-1" role="listitem" class="v-list-item v-list-item--two-line theme--light flex-wrap">
      <div class="v-avatar v-list-item__avatar my-2" style="height: 40px; min-width: 40px; width: 40px;"><span aria-hidden="true" class="v-icon notranslate theme--light grey--text" style="font-size: 24px; height: 24px; width: 24px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg" style="font-size: 24px; height: 24px; width: 24px;"><path d="M13,9V3.5L18.5,9M6,2C4.89,2 4,2.89 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6Z"></path></svg></span></div>
      <div class="v-list-item__content">
        <div class="v-list-item__title text-wrap grey--text">
          test
        </div>
        <!---->
        <!---->
      </div>
      <div class="v-list-item__action flex-row"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default" aria-label="Sélectionner le fichier"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light grey--text"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z"></path></svg></span></span></button>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <hr role="separator" aria-orientation="horizontal" class="v-divider v-divider--inset theme--light">
  </div>
  <!---->
  <div class="v-dialog__container vd-dialog-box" aria-modal="true">
    <!---->
  </div>
</div>
`;

exports[`UploadWorkflow renders correctly with a single file 1`] = `
<div class="vd-upload-workflow" style="width: 100%;">
  <h4 class="text-h6 mb-2">
    Document à nous transmettre
  </h4>
  <div role="list" class="v-list vd-file-list v-sheet theme--light transparent" style="width: 100%;">
    <div tabindex="-1" role="listitem" class="v-list-item v-list-item--two-line theme--light flex-wrap">
      <div class="v-avatar v-list-item__avatar my-2" style="height: 40px; min-width: 40px; width: 40px;"><span aria-hidden="true" class="v-icon notranslate theme--light grey--text" style="font-size: 24px; height: 24px; width: 24px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg" style="font-size: 24px; height: 24px; width: 24px;"><path d="M13,9V3.5L18.5,9M6,2C4.89,2 4,2.89 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6Z"></path></svg></span></div>
      <div class="v-list-item__content">
        <div class="v-list-item__title text-wrap grey--text">
          test
        </div>
        <!---->
        <!---->
      </div>
      <div class="v-list-item__action flex-row"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default" aria-label="Sélectionner le fichier"><span class="v-btn__content"><span aria-hidden="true" class="v-icon notranslate theme--light grey--text"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true" class="v-icon__svg"><path d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z"></path></svg></span></span></button>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <hr role="separator" aria-orientation="horizontal" class="v-divider v-divider--inset theme--light">
  </div>
  <!---->
  <div class="v-dialog__container vd-dialog-box" aria-modal="true">
    <!---->
  </div>
</div>
`;
